# deep-research-agent-openai-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
deep_research/: deep_research.py  research_manager.py
