[project]
name = "deep-research-openai"
version = "0.1.0"
description = "Deep Research Using OpenAI SDK"
requires-python = ">=3.10"  
dependencies = [
    "gradio>=5.38.2",
    "python-dotenv>=1.1.1", 
    "pydantic>=2.11.7",
    "sendgrid>=6.12.2",
    "openai>=1.97.1",
    "openai-agents>=0.1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.12.14",
    "asynciolimiter>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0", 
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_research"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]